--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       padding-top: 40px;
     }
   </style>
-  <title>Счетчик подписчиков Youtube-канала!</title>
+  <title>Поинты Hunters</title>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
       <h1>Таблица поинтов Hunters!</h1>
 
       <div class="row">
-        <div class="col-8">
+        <div class="col-12 col-md-8">
           <div class="card">
             <div class="card-body">
               <h5 class="card-title" id="hunt-name">Ник игрока</h5>
@@ -31,7 +31,7 @@
             </div>
           </div>
         </div>
-        <div class="col-4">
+        <div class="col-6 col-md-4 order-first order-md-last">
           <form class="form-inline" id="form" action="#">
             <div class="form-group mx-sm-3 mb-2">
               <label for="hunt-search" class="sr-only">Ваш точный ник</label>
