--- a/index.html
+++ b/index.html
@@ -5,49 +5,44 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <style>
-    .header {
-      padding-top: 40px;
-    }
-  </style>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="./css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="./css/animate.css">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Поинты Hunters</title>
 </head>
 
 <body>
-  <header class="header">
+  <main class="main">
     <div class="container">
-      <h1>Таблица поинтов Hunters!</h1>
-
-      <div class="row">
-        <div class="col-12 col-md-8">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title" id="hunt-name">Ник игрока</h5>
-              <p class="card-text">У вас <span id="points-count">0</span> поинтов</p>
+      <div class="hunters wow fadeInDown">
+        <h1 class="hunters-title">Таблица поинтов Hunters!</h1>
+        <div class="row ">
+          <div class="col-12">
+            <form class="hunters-form" id="form" action="#">
+              <input class="hunters-form__input" type="text" autocomplete="off" id="hunt-search"
+                placeholder="Ваш точный ник">
+              <button class="hunters-form__btn" type="submit">Поиск</button>
+            </form>
+          </div>
+          <div class="col-12">
+            <div class="hunters-card">
+              <div class="hunters-card__text">
+                <h5 class="hunters-card__name" id="hunt-name">Ник игрока</h5>
+                <p class="hunters-card__class" id="hunt-class">Класс игрока</p>
+              </div>
+              <p class="hunters-card__points">Ваши поинты : <span id="points-count">0</span></p>
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-4 order-first order-md-last">
-          <form class="form-inline" id="form" action="#">
-            <div class="form-group mx-sm-3 mb-2">
-              <label for="hunt-search" class="sr-only">Ваш точный ник</label>
-              <input type="text" autocomplete="off"  class="form-control" id="hunt-search" placeholder="Ваш точный ник">
-            </div>
-            <button type="submit" class="btn btn-primary mb-2">Поиск</button>
-          </form>
-        </div>
       </div>
     </div>
-  </header>
-
-  <script src="./main.js"></script>
-  <!-- 
-AIzaSyB7pT0HMSiGxTzmU8gI5kR3XRTAbqt55k0
- -->
+  </main>
+  <script src="./js/wow.min.js"></script>
+  <script src="./js/main.js"></script>
+  <script>
+    new WOW().init();
+  </script>
 </body>
 
 </html>
