--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <script src="https://kit.fontawesome.com/53aae75903.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="./css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="./css/animate.css">
@@ -22,7 +23,7 @@
             <form class="hunters-form" id="form" action="#">
               <input class="hunters-form__input" type="text" autocomplete="off" id="hunt-search"
                 placeholder="Ваш точный ник">
-              <button class="hunters-form__btn" type="submit">Поиск</button>
+              <button class="hunters-form__btn" type="submit"><i class="fas fa-search"></i></button>
             </form>
           </div>
           <div class="col-12">
