--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
           <div class="col-12">
             <div class="hunters-card">
               <div class="hunters-card__text">
-                <h5 class="hunters-card__name wow fadeInLeft" id="hunt-name">Ник игрока</h5>
-                <p class="hunters-card__class" id="hunt-class">Класс игрока</p>
+                <p class="hunters-card__name wow fadeInLeft" id="hunt-name">Ник игрока</p>
+                <p class="hunters-card__class"><img class="hunters-card__img" src="./img/class/0.png" alt=""><span id="hunt-class">Класс игрока</span></p>
               </div>
-              <p class="hunters-card__points">Ваши поинты : <span id="points-count">0</span></p>
+              <div class="hunters-card__points">
+                  <p>Ваши поинты :</p>
+                  <p id="points-count">0</p>
+              </div>
             </div>
           </div>
         </div>
