--- a/index.html
+++ b/index.html
@@ -37,10 +37,13 @@
                   <p id="points-count">0</p>
               </div>
             </div>
+            <div class="hunters-advice">
+              <div class="hunters-advice__descr">Описание совета</div>
+            </div>
           </div>
         </div>
         <div class="hunters-descr">
-          *регистр букв не важен, но поиск чувствителен к языку.
+          *Важен регистр и язык. Может найти по отдельным кусочкам ника
         </div>
       </div>
     </div>
