--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="hunters-card">
               <div class="hunters-card__text">
                 <p class="hunters-card__name wow" id="hunt-name">Ник игрока</p>
-                <p class="hunters-card__class"><img class="hunters-card__img" src="./img/class/0.png" alt=""><span id="hunt-class">Класс игрока</span></p>
+                <p class="hunters-card__class"><img class="hunters-card__img" src="./img/class/0.png" alt=""><span id="hunt-class">Класс персонажа</span></p>
               </div>
               <div class="hunters-card__points">
                   <p class="hunters-card__points-descr">Ваши поинты :</p>
