--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           *Важен регистр и язык. Может найти по отдельным кусочкам ника
         </div>
       </div>
-      <div class="debtors">
+      <div class="debtors wow fadeInUp">
         <h2 class="debtors-title">Должники по поинтам</h2>
         <div class="debtors-list">
         </div>
