--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </div>
         </div>
         <div class="hunters-descr">
-          *Важен регистр и язык. Может найти по отдельным кусочкам ника
+          *Важен регистр и язык. Может найти по отдельным частям ника.
         </div>
       </div>
       <div class="debtors wow fadeInUp">
