--- a/index.html
+++ b/index.html
@@ -28,17 +28,25 @@
           </div>
           <div class="col-12">
             <div class="hunters-card">
-              <div class="hunters-card__text">
-                <p class="hunters-card__name wow" id="hunt-name">Ник игрока</p>
-                <p class="hunters-card__class"><img class="hunters-card__img" src="./dist/img/class/0.png" alt=""><span id="hunt-class">Класс персонажа</span></p>
+              <div class="hunters-card__info">
+                <div class="hunters-card__item-info">
+                  <div class="hunters-card__item-title">Ник игрока:</div>
+                  <div class="hunters-card__item-descr" id="hunt-name">Ник</div>
+                </div>
+                <div class="hunters-card__item-info">
+                  <div class="hunters-card__item-title">Класс персонажа:</div>
+                  <div class="hunters-card__item-descr">
+                    <img class="hunters-card__img" src="./dist/img/class/0.png" alt="">
+                  </div>
+                </div>
+                <div class="hunters-card__item-info">
+                  <div class="hunters-card__item-title hunters-card__item-points">Поинты:</div>
+                  <div class="hunters-card__item-descr" id="points-count">Поинты</div>
+                </div>
               </div>
-              <div class="hunters-card__points">
-                  <p class="hunters-card__points-descr">Ваши поинты :</p>
-                  <p id="points-count">0</p>
+              <div class="hunters-advice">
+                <div class="hunters-advice__descr">Описание совета</div>
               </div>
-            </div>
-            <div class="hunters-advice">
-              <div class="hunters-advice__descr">Описание совета</div>
             </div>
           </div>
         </div>
