--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <script src="https://kit.fontawesome.com/53aae75903.js" crossorigin="anonymous"></script>
+  <link rel="icon" type="image/png" href="./dist/img/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="./dist/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="./dist/css/animate.css">
   <link rel="stylesheet" href="./dist/css/style.css">
+  <script src="https://kit.fontawesome.com/53aae75903.js" crossorigin="anonymous"></script>
   <title>Поинты Hunters</title>
 </head>
 
@@ -61,11 +62,11 @@
       </div>
     </div>
   </main>
-  <script src="./src/js/wow.min.js"></script>
+  <script src="./dist/js/wow.min.js"></script>
   <script>
     new WOW().init();
   </script>
-  <script src="./src/js/main.js"></script>
+  <script src="./dist/js/main.js"></script>
 </body>
 
 </html>
