--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <script>
     new WOW().init();
   </script>
-  <script src="./dist/js/main.js"></script>
+  <script src="./src/index.js"></script>
 </body>
 
 </html>
